--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -48,3 +48,97 @@ table {
 }
 
 /* ============== My CSS ============= */
+
+body{
+	font-family:Arial, Helvetica, sans-serif;
+	background-color: #aad4cf;
+}
+
+header{
+	position:relative;
+	text-align:center;
+}
+
+header image{
+	height:auto;
+	width:100%;
+}
+
+.title{
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform: translate(-50%, -50%);
+	font-size: 2.5rem;
+	color: white;
+}
+
+nav ul{
+	display: flex;
+	justify-content: center;
+	list-style: none;
+	padding: 1em 0;
+	background-color: #d4e9e7;
+}
+
+nav ul li {
+    margin: 0 1em;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: black;
+}
+
+.article {
+    padding: 2em;
+}
+
+.article img {
+    float: left;
+    margin-right: 1em;
+    width: 150px;
+}
+
+.facts {
+    background-color: #d4e9e7;
+    padding: 1em;
+}
+
+.facts ul {
+    list-style-type: disc;
+    padding-left: 2em;
+}
+
+.contact {
+    background-color: #d4e9e7;
+    padding: 1em;
+    margin-top: 1em;
+}
+
+.contact form {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact label {
+    margin: 0.5em 0 0.2em;
+}
+
+.contact input, .contact textarea {
+    padding: 0.5em;
+    margin-bottom: 1em;
+}
+
+.contact button {
+    padding: 0.5em 1em;
+    background-color: #aad4cf;
+    border: black;
+    cursor: pointer;
+}
+
+footer {
+    text-align: center;
+    padding: 1em;
+    background-color: #d4e9e7;
+}
